WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64574
DFG JIT does not optimize Branch as well as it could
https://bugs.webkit.org/show_bug.cgi?id=64574
Summary
DFG JIT does not optimize Branch as well as it could
Filip Pizlo
Reported
2011-07-14 17:11:42 PDT
The DFG speculative JIT will terminate speculation if a Branch did not encounter an integer or a boolean. Terminating speculation in this case is not profitable, since proving that the Branch encountered either integer or boolean does not provide any useful data flow information (at least not in the current DFG JIT architecture). The non-speculative JIT always performs slow calls for Branches. Both JITs should use the same implementation of Branch, which does no speculation, and only performs a slow call if necessary.
Attachments
the patch
(6.53 KB, patch)
2011-07-14 17:15 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-14 17:15:40 PDT
Created
attachment 100901
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-14 19:06:23 PDT
Comment on
attachment 100901
[details]
the patch Clearing flags on attachment: 100901 Committed
r91041
: <
http://trac.webkit.org/changeset/91041
>
WebKit Review Bot
Comment 3
2011-07-14 19:06:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug