DFG JIT does not optimize Branch as well as it could. https://bugs.webkit.org/show_bug.cgi?id=64574

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-14
Reviewed by Gavin Barraclough.

This creates a common code path for emitting unfused branches, which does
no speculation, and only performs a slow call if absolutely necessary.

* dfg/DFGJITCodeGenerator.cpp:
(JSC::DFG::JITCodeGenerator::emitBranch):
* dfg/DFGJITCodeGenerator.h:
* dfg/DFGNonSpeculativeJIT.cpp:
(JSC::DFG::NonSpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/80298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91041 268f45cc-cd09-0410-ab3c-d52691b4dbfc